# tokenomics

./: .gitignore  CLAUDE.md  README.md  mined-external-report.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: tokenomics-report.md  tokenomics-scan.md  tokenomics-watch.md
docs/: architecture.md  detectors.md  development.md  log-format.md  plugin.md  taxonomy.md
hooks/: hooks.json
skills/claude-md-linter/: SKILL.md
skills/code-indexing-advisor/: SKILL.md
skills/context-window-evaluator/: SKILL.md
skills/dynamic-router-advisor/: SKILL.md
skills/tokenomics-advisor-claude/: SKILL.md
skills/tokenomics-advisor-code-indexing/: SKILL.md
skills/tokenomics-advisor-context-window/: SKILL.md
skills/tokenomics-advisor-dynamic-router/: SKILL.md
src/tokenomics/: __init__.py  assemble.py  cli.py  config.py  features.py  logparse.py  logpath.py  metrics.py  miner.py  model.py  pricing.py  promote.py
src/tokenomics/capture/: __init__.py  flags.py  runner.py  tailer.py
src/tokenomics/detectors/: __init__.py  _util.py  base.py  cache_busting.py  claudemd_bloat.py  context_window.py  review_agents.py  routing.py  search_efficiency.py  second_tier.py  taxonomy_match.py
src/tokenomics/enrich/: __init__.py  deep.py
src/tokenomics/report/: __init__.py  aggregate.py  mine_render.py  render.py
tests/: conftest.py  test_assemble.py  test_capture.py  test_detectors.py  test_metrics.py  test_miner.py  test_promote.py  test_real_logs.py  test_report_and_deep.py  test_run_scan.py  test_savings.py  test_static_analysis.py  test_taxonomy.py
(+12 files in other folders)
