[project]
name = "tokenomics"
version = "0.1.0"
description = "Diagnoses high token costs in Claude Code usage, discovers savings, and produces a recommendations report."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Steve Wilson" }]
keywords = ["tokens", "cost", "efficiency", "observability", "claude-code"]
dependencies = []

[project.scripts]
tokenomics = "tokenomics.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "realcorpus: opt-in tests that run against the live ~/.claude/projects corpus",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
